# sisyphus-api

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.release  LICENSE  README.md  dbt_project.yml  profiles.yml  pyproject.toml  railway.toml  run_pipeline.py
.github/workflows/: ci.yml  release-image.yml
dbt/models/: sources.yml
dbt/seeds/: daily_quote_selection.csv  quote_review_queue.csv
dbt/tests/: daily_quote_count_per_thinker.sql  no_attribution_section_daily.sql  no_citation_only_daily.sql  no_source_artifacts.sql  review_queue_candidates_exist.sql  review_queue_excludes_daily_quotes.sql  review_queue_excludes_hard_failures.sql  review_queue_has_expected_balance.sql  supplemental_does_not_duplicate_wikiquote.sql  supplemental_translation_provenance.sql
docs/: ARQUITETURA.md  COLLECTION_AUDIT.md  DATA_PIPELINE.md  DECISIONS.md  EDITORIAL_QUEUE.md  PILARES_TECNICOS.md  PRODUCT_VISION.md  RELEASE.md  ROADMAP.md  SUPPLEMENTAL_SOURCES.md
editorial/: supplemental_quotes.csv
src/sisyphus/: __init__.py  audit.py  cache.py  caching.py  catalog.py  config.py  dataset.py  dates.py  deps.py  errors.py  logging_config.py  main.py  middleware.py  ratelimit.py  schemas.py
tests/: conftest.py  test_clients.py  test_collection_audit.py  test_data_pipeline.py  test_dates.py  test_middleware.py  test_product_routes.py  test_quote_selection.py  test_sqlite_quotes.py  test_wikidata_build.py  test_wikiquote_parsing.py
tests/fixtures/: camus_quotes.html  editorial_cases.json  nietzsche_entity.json  nietzsche_labels.json  (+1 more)
(+19 files in other folders)
