[project]
name = "sisyphus"
version = "0.1.0"
description = "API de consulta a pensadores — frases, obras e biografia sobre fontes abertas (Wikiquote + Wikidata)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leonardo Michelotti" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "types-cachetools",
    "lxml-stubs",
    "duckdb>=1.2,<2",
    "dbt-core>=1.9,<2",
    "dbt-duckdb>=1.9,<2",
    "pip-audit>=2.9,<3",
]

[project.urls]
Repository = "https://github.com/leonardo-michelotti/sisyphus-api"
Documentation = "https://sisyphus-public-production.up.railway.app/api"

[project.scripts]
sisyphus-audit = "sisyphus.audit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sisyphus"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sisyphus"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
